# infrahub-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  Dockerfile  LLMS.md  README.md  docker-compose.override.yml  docker-compose.yml  flake.nix  pyproject.toml  server.json  server.py  tasks.py
.agents/commands/: create-issue.md  pr.md  rebase.md  speckit.archive.run.md  speckit.auto.run.agent.md  speckit.critique.run.md  speckit.extract.md  speckit.extract.run.md  speckit.opsmill.extract.md  speckit.opsmill.retrospect.md  speckit.opsmill.summary.md  speckit.plan.md  speckit.reconcile.run.md  speckit.retrospect.run.md  speckit.review.code.agent.md  speckit.review.comments.md  speckit.review.errors.agent.md  speckit.review.md  speckit.review.simplify.agent.md  speckit.review.tests.md  speckit.review.types.md  speckit.summary.run.md  speckit.tinyspec.classify.agent.md  speckit.tinyspec.implement.md  speckit.tinyspec.tinyspec.md
.agents/skills/speckit-archive/: SKILL.md
.agents/skills/speckit-auto-run/: SKILL.md
.agents/skills/speckit-extract-run/: SKILL.md
.agents/skills/speckit-opsmill-extract/: SKILL.md
.agents/skills/speckit-opsmill-retrospect/: SKILL.md
.agents/skills/speckit-opsmill-summary/: SKILL.md
.agents/skills/speckit-retrospect-run/: SKILL.md
.agents/skills/speckit-summary-run/: SKILL.md
.github/: dependabot.yml  file-filters.yml  labels.yml  release-drafter.yml  version-drafter.yml
.github/instructions/: python.instructions.md  tooling.instructions.md
.github/workflows/: auto-bump.yml  ci-docker-image.yml  ci-mcp-discovery.yml  ci.yml  labeler.yml  labels.yml  release-drafter.yml  release.yml  sync-docs.yml  version-sync.yml  workflow-publish.yml
.specify/: extensions.yml  feature.json  init-options.json
.specify/extensions/: .registry
.specify/extensions/archive/: extension.yml
.specify/extensions/auto/: LICENSE  README.md  extension.yml
.specify/extensions/extract/: README.md  extension.yml
.specify/extensions/opsmill/: CHANGELOG.md  LICENSE  README.md  extension.yml
.specify/extensions/retrospect/: README.md  extension.yml
.specify/extensions/summary/: CHANGELOG.md  README.md  extension.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: adr-template.md
.specify/workflows/: workflow-registry.json
.vale/styles/: brand-names.txt  code-identifiers.txt  spelling-exceptions.txt  technical-terms.txt
.vale/styles/Infrahub/: branded-terms-case-swap.yml  sentence-case.yml  spelling.yml
dev/: README.md  constitution.md
dev/adr/: 0001-context-nuggets-pattern.md  0002-middleware-stack-ordering.md  0003-dual-layer-authentication.md  0004-tag-based-read-only-mode.md  0005-lazy-session-branch-creation.md  0006-config-validation-at-boundary.md  0007-hash-validated-schema-cache.md  0007-per-session-branch-recovery-and-reset.md  0008-graph-traversal-over-schema-depth.md
dev/guidelines/: feature-completion.md  python.md
dev/guides/: README.md
dev/knowledge/: architecture.md
development/: Dockerfile  docker-compose.yml
development/keycloak/: infrahub-realm.json  setup-keycloak.sh
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: installation.mdx  readme.mdx
docs/docs/getting-started/: authentication.mdx  first-agent-run.mdx  installation.mdx  make-a-change.mdx
docs/docs/guides/: authentication.mdx  docker-compose.mdx  docker.mdx  installation.mdx
docs/docs/integrations/: claude-agent-sdk.mdx  claude-code.mdx  claude-desktop.mdx  cursor.mdx  openai-agents-sdk.mdx  vscode.mdx
docs/docs/references/: authentication.mdx  configuration.mdx  methods.mdx
docs/docs/release-notes/: release-1_0_0.mdx  release-1_0_1.mdx  release-1_1_1.mdx  release-1_1_2.mdx  release-1_1_3.mdx  release-1_1_4.mdx  release-1_1_5.mdx  release-1_1_6.mdx
docs/docs/topics/: authentication.mdx
docs/docs/use-cases/: brownfield-onboarding.mdx  compliance-analysis.mdx  cross-system-correlation.mdx  natural-language-graphql.mdx  safe-changes-branch-isolation.mdx  (+1 more)
docs/specs/: INFP-411-pr2-read-only.md  INFP-411-pr5-observability.md  INFP-411.md
scripts/: sync-versions.sh  test_sandbox.py  update-capabilities.sh
specs/: INFP-411-pr2-read-only.md  INFP-411-pr3-auth.md  INFP-411-pr4-production-middleware.md  INFP-411-pr5-observability.md  INFP-411-pr6-session-compat.md
specs/001-infrahub-testcontainers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-traversal-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-infrahub-app/: spec.md
specs/20260504-203256-schema-cache/: data-model.md  research.md  spec.md
src/infrahub_app/: __init__.py  app.py  explore.py  overview.py  panels.py
src/infrahub_mcp/: __init__.py  __main__.py  _cli.py  auth.py  config.py  constants.py  middleware.py  schema.py  schema_cache.py  server.py  traversal.py  utils.py
src/infrahub_mcp_server/: branch.py  constants.py  gql.py  nodes.py  schema.py  server.py  server_hackathon.py  server_initial.py  utils.py
tasks/: __init__.py  docs.py
tests/: utils.py
tests/integration/: _util.py  conftest.py  test_branches_resource.py  test_failure_modes.py  test_graphql_tool.py  test_live_session_branch.py  test_node_tools.py  test_sandbox.py  test_schema_resource.py  test_version_compat.py  test_write_tool.py
tests/unit/: conftest.py  test_app_explore.py  test_app_filters.py  test_app_overview.py  test_app_panels.py  test_auth.py  test_branch_pattern.py  test_cli.py  test_config.py  test_get_nodes_pagination.py  test_health.py  test_middleware.py  test_prompts.py  test_read_only.py  test_report_charts.py  test_report_fetchers.py  test_report_reports.py  test_report_store.py  test_reset_session_branch.py  test_schema_cache.py  test_schema_depth.py  test_schema_expand.py  test_server_env.py  test_server_prompt.py  test_session_branch_validation.py  test_session_isolation.py  test_token_passthrough.py  test_tools.py  test_traversal.py
(+66 files in other folders)
