[project]
name = "infrahub-mcp"
version = "1.0.2"
description = "MCP server to interact with Infrahub"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.1",
    "infrahub-sdk>=1.13.5",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.6,<3",
    "toonify>=0.1.2",
]

[project.scripts]
infrahub-mcp = "infrahub_mcp:main"

[dependency-groups]
dev = [
    "rumdl>=0.1.68",
    "invoke>=2.2.0",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.15.5",
    "pylint>=4.0.5",
    "yamllint>=1.37.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = []
addopts = "-p no:pytest-infrahub"

[tool.mypy]
pretty = true
ignore_missing_imports = true

exclude = [
    "server_initial\\.py$",  # TOML's double-quoted strings require escaping backslashes
    "server_hackathon\\.py$",  # TOML's double-quoted strings require escaping backslashes
]

[tool.ruff]
line-length = 120

exclude = [
    ".git",
    ".venv",
    "env",
    "_build",
    "build",
    "dist",
    "examples",
]

[tool.ruff.lint]
preview = true

task-tags = ["FIXME", "TODO"]

select = ["ALL"]

ignore = [
    "D",      # pydocstyle
    "DOC",    # pydoclint
    "CPY",    # flake8-copyright
    "T201",   # use of `print`
    "ISC",    # flake8-implicit-str-concat
    "COM812", # missing-trailing-comma
    "N999",   # Invalid module name
    "TD",
    "FIX",    # TODO
    "TRY",
    "B008",   # Do not perform function call `Depends` in argument defaults
    "EM102",  # Exception must not use an f-string literal
    "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
    "G004",   # Logging statement uses f-string
    "S311",   # Standard pseudo-random generators are not suitable
    "LOG004", # `.exception()` call outside exception handlers
    "FBT",    # Boolean-typed positional argument in function definition
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in `value`
    "ERA001", # Found commented-out code
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["infrahub_mcp"]


[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert in test files
    "ARG002",  # Unused method args (required by @patch decorators)
    "PLC2701", # Private name imports (testing internal helpers)
    "PLR2004", # Magic values in comparisons (expected in assertions)
    "PLR6301", # Method could be static (standard test-class pattern)
]


[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.13.3",
    "cryptography>=46.0.5",
    "protobuf>=6.33.5",
    "pyasn1>=0.6.3",
    "python-multipart>=0.0.22",
    "requests>=2.33.0",
    "starlette>=0.49.1",
    "ujson>=5.12.0",
    "urllib3>=2.6.3",
    "wheel>=0.46.2",
]

[tool.rumdl]
# Disabled rules
disable = ["MD013", "MD029", "MD033", "MD041"]

# Opt-in rules
extend-enable = ["MD060"]

# File exclusions
exclude = ["docs/docs/release-notes/**", "*-workspace/**"]

# Per-file ignores
[tool.rumdl.per-file-ignores]
"**/AGENTS.md" = ["MD013", "MD024", "MD025", "MD029", "MD033", "MD041"]

# MD024: allow duplicate headings among siblings only
[tool.rumdl.MD024]
siblings-only = true

# MD025: don't treat frontmatter title as H1
[tool.rumdl.MD025]
front-matter-title = ""

# MD060: require leading and trailing pipes
[tool.rumdl.MD060]
enabled = true

[tool.hatch.build.targets.wheel]
packages = ["src/infrahub_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
